--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,13 +1,8 @@
 {
     "type": "sqlite",
     "database": "./src/database/database.sqlite",
-    "migrations": [
-        "./src/database/migrations/**.ts"
-    ],
-    "entities": [
-        "./src/models/**.ts"
-    ],
-    "logging": true,
+    "migrations": ["./src/database/migrations/**.ts"],
+    "entities": ["./src/database/models/**.ts"],
     "cli": {
         "migrationsDir": "./src/database/migrations"
     }
