--- a/package.json
+++ b/package.json
@@ -1,42 +1,36 @@
 {
-    "name": "api-node",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "dependencies": {
-        "@types/nodemailer": "^6.4.0",
-        "eslint-config-prettier": "^8.0.0",
-        "eslint-plugin-prettier": "^3.3.1",
-        "express": "^4.17.1",
-        "express-async-errors": "^3.1.1",
-        "handlebars": "^4.7.7",
-        "nodemailer": "^6.4.18",
-        "prettier": "^2.2.1",
-        "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.0.2",
-        "typeorm": "^0.2.31",
-        "uuid": "^8.3.2",
-        "yup": "^0.32.9"
-    },
-    "scripts": {
-        "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-        "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-        "test": "NODE_ENV=test jest -i"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.11",
-        "@types/jest": "^26.0.20",
-        "@types/supertest": "^2.0.10",
-        "@types/uuid": "^8.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.15.1",
-        "@typescript-eslint/parser": "^4.15.1",
-        "eslint": "^7.20.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.22.1",
-        "jest": "^26.6.3",
-        "supertest": "^6.1.3",
-        "ts-jest": "^26.5.2",
-        "ts-node-dev": "^1.1.1",
-        "typescript": "^4.1.5"
-    }
+  "name": "nlw4",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --rs --ignore-watch node_modules ./src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "test": "SET NODE_ENV=test && jest",
+    "posttest": "rm ./src/database/database.test.sqlite"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
+    "@types/nodemailer": "^6.4.1",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.6.0",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
+  }
 }
